src/app/css/theme.css
@theme {
  --font-mono: var(--font-mono), monospace;
  --font-sans: var(--font-sans), sans-serif;

  --color-oatmeal-50: oklch(0.97 0.01 87);
  --color-oatmeal-100: oklch(0.923 0.026 87);
  --color-oatmeal-200: oklch(0.86 0.035 87);
  --color-oatmeal-300: oklch(0.78 0.05 87);
  --color-oatmeal-400: oklch(0.7 0.07 87);
  --color-oatmeal-500: oklch(0.62 0.09 87);
  --color-oatmeal-600: oklch(0.53 0.09 87);
  --color-oatmeal-700: oklch(0.44 0.08 87);
  --color-oatmeal-800: oklch(0.35 0.065 87);
  --color-oatmeal-900: oklch(0.27 0.05 87);
  --color-oatmeal-950: oklch(0.18 0.035 87);

  --color-blueberry-50: oklch(0.97 0.015 233);
  --color-blueberry-100: oklch(0.93 0.03 233);
  --color-blueberry-200: oklch(0.85 0.05 233);
  --color-blueberry-300: oklch(0.718 0.077 233);
  --color-blueberry-400: oklch(0.57 0.11 245);
  --color-blueberry-500: oklch(0.425 0.144 257);
  --color-blueberry-600: oklch(0.36 0.12 259);
  --color-blueberry-700: oklch(0.3 0.1 260);
  --color-blueberry-800: oklch(0.24 0.08 261);
  --color-blueberry-900: oklch(0.18 0.06 263);
  --color-blueberry-950: oklch(0.13 0.03 264);

  --spacing-content: min(100% - 2rem, var(--container-5xl));
  --container-navigation: 500px; /* Container threshold to switch to mobile navigation */

  @keyframes jumping-square {
    /* Holds the square still for ~1.2s on load before action starts */
    0% {
      transform: translateY(0) scale(1, 1);
      border-radius: 0%;
    }
    10% {
      transform: translateY(0) scale(1, 1);
      border-radius: 0%;
    }

    /* Wobble & Anticipation */
    11.5% {
      transform: translateY(0) scale(0.9, 1.1);
      border-radius: 0%;
    }
    13.5% {
      transform: translateY(0) scale(1.3, 0.7);
      border-radius: 10%;
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    /* Jump */
    18% {
      /* Use to em to make jump height equal to the font height */
      transform: translateY(-1em) scale(0.9, 1.1);
      border-radius: 50%;
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    }

    /* Landing & Bounce */
    22% {
      transform: translateY(0) scale(1.25, 0.75);
      border-radius: 50%;
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
    }
    25% {
      /* Second bounce scaled based on font size */
      transform: translateY(-0.375em) scale(0.95, 1.05);
      border-radius: 50%;
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
    }
    28% {
      transform: translateY(0) scale(1.05, 0.95);
      border-radius: 50%;
    }
    30% {
      /* Scaled micro hop */
      transform: translateY(-0.06em) scale(1, 1);
      border-radius: 50%;
    }
    31% {
      transform: translateY(0) scale(1, 1);
      border-radius: 50%;
    }

    /* Short Bridge */
    32% {
      transform: translateY(0) scale(1, 1);
      border-radius: 50%;
    }

    /* Squeeze Back to Square */
    34% {
      transform: translateY(0) scale(0.85, 1.15);
      border-radius: 50%;
    }
    36% {
      transform: translateY(0) scale(1.3, 0.75);
      border-radius: 15%;
    }
    37.5% {
      transform: translateY(0) scale(0.95, 1.05);
      border-radius: 0%;
    }
    39% {
      transform: translateY(0) scale(1, 1);
      border-radius: 0%;
    }

    /* Long Pause */
    100% {
      transform: translateY(0) scale(1, 1);
      border-radius: 0%;
    }
  }

  --animate-floating-nav: floating-nav linear both;

  @keyframes floating-nav {
    from {
      border-radius: 0;
      background-color: transparent;
      border: 1px solid transparent;
    }
    to {
      /* Target Dimensions */
      width: 90%;
      max-width: 700px;
      top: 1.5rem;
      border-radius: calc(infinity * 1px);
      padding-block: --spacing(1.5);
      padding-left: --spacing(1.5); /* Different because logo gets shrinked. */
      padding-right: --spacing(5);

      /* slightly adjusted clear surface */
      background: linear-gradient(
        135deg,
        oklch(1 0 0 / 0.6),
        oklch(1 0 0 / 0.2)
      );
      backdrop-filter: blur(var(--blur-md));
      border: 1px solid oklch(1 0 0 / 0.4);
      border-top: 1px solid oklch(1 0 0 / 0.8);
      border-left: 1px solid oklch(1 0 0 / 0.8);
      box-shadow:
        inset 0 1px 0 0 oklch(1 0 0 / 0.5),
        0px 1px 2px oklch(from var(--color-oatmeal-900) l c h / 0.05),
        0px 3.4px 3.8px -0.5px oklch(from var(--color-oatmeal-900) l c h / 0.05),
        0px 7.8px 8.7px -1px oklch(from var(--color-oatmeal-900) l c h / 0.06),
        0px 18px 20px -1.5px oklch(from var(--color-oatmeal-900) l c h / 0.07);
    }
  }

  --animate-shrink: shrink linear both;

  @keyframes shrink {
    to {
      transform: scale(var(--shrink-scale, 0.8));
    }
  }
}

